--- a/login.html
+++ b/login.html
@@ -73,6 +73,13 @@
                 <h3>เพื่อสุขภาพที่ดีของคุณ</h3>
             </div>
         </div>
+
+        <div class="row">
+            <div class="column" align="center">
+                <img src="logo.png" width="250" height="250">
+            </div>
+        </div>
+
             <input style="margin:10px auto;display:block;" type="text" placeholder="Username" id="user" required>
           <input style="margin:0px auto;display:block;" type="password" placeholder="Password" id="pass" required>
 
