--- a/login.html
+++ b/login.html
@@ -115,6 +115,10 @@
           function wrongUser()    {
                                     alert("Wrong!! Username or Password");
                                   }
+          
+          function checkUser()    {
+                                    location.replace("Home.html")
+                                  }
 
         </script>
         
