--- a/login.html
+++ b/login.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width-device-width, initial=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>wealty</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="login.css">
+    
     <title>Login - ตรวจสภาพอากาศ</title>
 
     <style type="text/css">
