--- a/login.html
+++ b/login.html
@@ -26,6 +26,15 @@
               display: table;
               clear: both;
               }
+      body {
+              background-color: #3C3939;
+           }
+       h2  {
+         color: #fff;
+       }
+       h3  {
+         color: #fff;
+       }
     </style>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
