--- a/login.html
+++ b/login.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<body style="background-color: dimgrey;"
 
   <head>
-    <title>Login - ตรวจสภาพอากาศ</title>
+    <title>Login | ตรวจสภาพอากาศ</title>
+    <link rel="shortcut icon" href="icon.ico">
+
 
     <style type="text/css">
 
@@ -69,8 +72,8 @@
         
         <div class="row">
             <div class="column" align="center">
-                <h2>ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ</h2>
-                <h3>เพื่อสุขภาพที่ดีของคุณ</h3>
+                <h2><p style="color: floralwhite;">ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ</p></h2>
+                <h3><p style="color: floralwhite;">เพื่อสุขภาพที่ดีของคุณ</p></h3>
             </div>
         </div>
 
@@ -82,13 +85,14 @@
 
             <input style="margin:10px auto;display:block;" type="text" placeholder="Username" id="user" required>
           <input style="margin:0px auto;display:block;" type="password" placeholder="Password" id="pass" required>
+          <br>
 
 
-          <div class="row">
+          <div class="row" a>
             <div class="column" align="center">
 
-              <button onclick="notavailable()"  style="background-color: #2255a4;border-color:#2255a4;color: white;padding: 10px;margin-right: 0px ;border: none;cursor: pointer;width: 150px;border-radius: 10px;">Forget password?</button>
-              <button id="myBtn" onclick="checkUser()" style="background-color: #28b779;border-color: #28b779;color: white;padding: 10px;margin-left: 20px;border: none;cursor: pointer;width: 80px;border-radius: 10px;">Login</button>
+              <button onclick="notavailable()"  style="background-color: lightblue; 10px;margin-right: 0px ;border: none;cursor: pointer;width: 150px;border-radius: 10px;">Forget password?</button>
+              <button id="myBtn" onclick="checkUser()" style="background-color: lightblue; 10px;margin-left: 20px;border: none;cursor: pointer;width: 80px;border-radius: 10px;">Login</button>
 
             </div>
           </div>
