--- a/Home.html
+++ b/Home.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            h1 {
-            color: white;
-            }
-            p {
-            color: white
-            ;
-            }
-            body {
-            background-color: #3C3939;
-            font-family: Roboto Condensed;
-            </style>
-        <title>
-            ระบบตรวจสอบคุณภาพอากาศและอุณภูมิของอากาศเพื่อสุขภาพที่ดีของคุณ
-        </title>
-            <body>
-                <h1>ที่มาและความสำคัญ</h1>
-                <p> ปัจจุบันอากาศของเรานั้นมีแต่ฝุ่นและมลพิษมากมายอีกทั้งสถาพอากาศที่ <br>
-                    แปรปรวนส่งผลต่อสุขภาพของเราได้ เราจึงได้คิดค้นโปรเจคของเราขึ้นมา <br>
-                    เพราะว่าในตอนนี้ฝุ่นละอองในอากาศบางพื้นที่อาจจะหนาแน่นเป็นอย่างมาก<br>
-                    และ อาจเป็นอันตรายต่อสุขภาพจึงต้องมีการตรวจสอบและป้องกันอย่างถูกวิธี<br>
-                    อีกทั้งอุณภูมิที่เปลี่ยนไปอย่างรวดเร็วก็อาจจะส่งผลต่อร่างกายได้เช่นเดียวกัน<br>
-                     จึงต้องมีการวัดค่าอุณภูมิแล้วบอกอย่าง Real time ว่าอุณภูมิตรงนั้นปกติหรือไม่<br>
-                     และทำการป้องกันได้อย่างเหมาะสม</p>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width-device-width, initial=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>wealty</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 
-            </body>
-    </head>
+</head>
+<body>
+
+    <header>
+      <div class="nav">
+          <ul>
+              <li class="Home"><a href="#">Home</a></li>
+              <li class="Sensor"><a href="#">Sensor</a></li>
+              <li class="About"><a href="#">About</a></li>
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              &emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <li class="Logout"><a href="#">Logout</a></li><i class="small material-icons">input</i>
+          </ul>
+      </div>
+    </header>
+    <div class="mainHome">
+        <div class="header">
+            <h1><img src="logo.png" alt="html5"width="70" height="70"/>&emsp;Weather Monitor System&emsp;<img src="logo.png" alt="html5"width="70" height="70"/></h1>
+            <h2>for your quality of life<br></h2>
+        </div>
+        <div class="picture">
+            <br><br><iframe width="421.33" height="237" src="https://www.youtube.com/embed/Fz9nWD_0jLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+        </div>
+        
+        <div class="title">
+            <h3><br><br><img src="logo.png" alt="html5"width="50" height="50"/>&emsp;ที่มาเเละความสำคัญของโครงการ&emsp;<img src="logo.png" alt="html5"width="50" height="50"/></h3>
+            <h4>(The importance of the project)</h4>
+        </div> 
+        <div class="subtitle">
+            <p>
+                ปัจจุบันอากาศของเรานั้นมีแต่ฝุ่นและมลพิษมากมายอีกทั้งสถาพอากาศที่ แปรปรวนส่งผลต่อสุขภาพของเราได้
+                เราจึงได้คิดค้นโปรเจคของเราขึ้นมา<br> เพราะว่าในตอนนี้ฝุ่นละอองในอากาศบางพื้นที่อาจจะหนาแน่นเป็นอย่างมาก
+                และ อาจเป็นอันตรายต่อสุขภาพจึงต้องมีการตรวจสอบและป้องกันอย่างถูกวิธี<br> อีกทั้งอุณภูมิที่เปลี่ยนไปอย่างรวดเร็ว
+                ก็อาจจะส่งผลต่อร่างกายได้เช่นเดียวกัน จึงต้องมีการวัดค่าอุณภูมิแล้วบอกอย่าง Real time ว่าอุณภูมิตรงนั้นปกติหรือไม่<br>
+                และทำการป้องกันได้อย่างเหมาะสม
+            </p>
+            <p>
+                Today, our air has many dust and pollution, and the weather conditions Variations can affect our health.
+                So we came up with our project.<br> Because now the dust in the air in some areas may be very dense.
+                and may be harmful to health, therefore must be properly monitored<br> and prevented In addition, the temperature changes rapidly.
+                It may affect the body as well. Therefore, the temperature must be measured <br>and then told in Real time whether the temperature there is normal or not.
+                and make appropriate protectio
+        </div> 
+    </div>
+</body>
 </html>
