--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>wealty</title>
+    <title>Home | Wealty</title>
+    <link rel="shortcut icon" href="icon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
