--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <body style="background-color: dimgrey;"
 
   <head>
-    <title>Login | ตรวจสภาพอากาศ</title>
+    <title>Login | Wealty</title>
     <link rel="shortcut icon" href="icon.ico">
 
 =======
