--- a/login.html
+++ b/login.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html>
 <body style="background-color: dimgrey;"
 
   <head>
     <title>Login | Wealty</title>
     <link rel="shortcut icon" href="icon.ico">
+  </html>
 
-=======
-<html lang="en">
-
-  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>wealty</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="login.css">
-    
-    <title>Login - ตรวจสภาพอากาศ</title>
->>>>>>> b3d347f98380435b8a62b288adced2c16fd93407
+
 
     <style type="text/css">
 
