--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,9 @@
 
 </head>
 <style>
+.bg-image {
+    background-image:url("https://th.postermywall.com/index.php/posterbuilder/copy/dc277ad03e88d0f22b297601c58f4ec2");
+}
     p1 {
         color:#66CCFF ;
     }
@@ -25,7 +28,7 @@
     p5 {
         color:#FF0000 ;
     }
-    body {
+body {
     margin: 0;
     padding: 0;
     background-color: #3C3939;
@@ -164,6 +167,7 @@
       </div>
     </header>
     <div class="mainHome">
+       <div class="bg-image">
         <div class="header">
             <h1><img src="logo.png" alt="html5"width="70" height="70"/>&emsp;Weather Monitor System&emsp;<img src="logo.png" alt="html5"width="70" height="70"/></h1>
             <h2>for your quality of life<br></h2>
@@ -231,6 +235,7 @@
             
             </p>
         </div>
+      </div>
     </div>
 </body>
 </html>
