--- a/Home.html
+++ b/Home.html
@@ -10,9 +10,13 @@
 
 </head>
 <style>
-.bg-image {
-    background-image:url("https://th.postermywall.com/index.php/posterbuilder/copy/dc277ad03e88d0f22b297601c58f4ec2");
-}
+ .bg-image {
+    background-color: #232222;
+     background-image:url("CB.jpg");
+     background-position: center;
+     background-repeat: no-repeat;  
+     background-size: cover;
+ }
     p1 {
         color:#66CCFF ;
     }
@@ -166,8 +170,8 @@ body {
           </ul>
       </div>
     </header>
-    <div class="mainHome">
-       <div class="bg-image">
+    <div class="bg-image">
+     <div class="mainHome">
         <div class="header">
             <h1><img src="logo.png" alt="html5"width="70" height="70"/>&emsp;Weather Monitor System&emsp;<img src="logo.png" alt="html5"width="70" height="70"/></h1>
             <h2>for your quality of life<br></h2>
@@ -230,9 +234,8 @@ body {
                 <img src="logo.png" alt="html5"width="50" height="50"/>26 - 50 AQI   :<p2>Green</p2> : คุณภาพอากาศดี สามารถทำกิจกรรมกลางแจ้งและการท่องเที่ยวได้ตามปกติ<br>
                 <img src="logo.png" alt="html5"width="50" height="50"/>51 - 100	AQI  :<p3>Yellow</p3> : สามารถทำกิจกรรมกลางแจ้งได้ตามปกติ หากมีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง<br>
                 <img src="logo.png" alt="html5"width="50" height="50"/>101 - 200 AQI :<p4>Orange</p4> : ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น<br> 
-                <img src="logo.png" alt="html5"width="50" height="50"/>201 - 300 AQI :<p5>Red</p5> : ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งหลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น 
+                <img src="logo.png" alt="html5"width="50" height="50"/>201 - 300 AQI :<p5>Red</p5> : ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งหลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น<br> <br> <br>  
              </ul>
-            
             </p>
         </div>
       </div>
