--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
      background-image:url("CB.jpg");
      background-position: center;
      background-repeat: no-repeat;  
-     background-size: cover;
+     background-size: 100% 100%;
  }
     p1 {
         color:#66CCFF ;
