--- a/Home.html
+++ b/Home.html
@@ -41,7 +41,7 @@
         </div>
         
         <div class="title">
-            <h3><br><br><img src="logo.png" alt="html5"width="50" height="50"/>&emsp;ที่มาเเละความสำคัญของโครงการ&emsp;<img src="logo.png" alt="html5"width="50" height="50"/></h3>
+            <h3><br><br><img src="ideaicon.png" alt="html5"width="50" height="50"/>&emsp;ที่มาเเละความสำคัญของโครงการ&emsp;<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
             <h4>(The importance of the project)</h4>
         </div> 
         <div class="subtitle">
@@ -60,7 +60,7 @@
                 and make appropriate protectio
         </div>
         <div class="title">
-            <h3><br><br><img src="logo.png" alt="html5"width="50" height="50"/>&emsp;แล้วอุณหภูมิแบบไหนถึงจะเหมาะสมหล่ะ?&emsp;<img src="logo.png" alt="html5"width="50" height="50"/></h3>
+            <h3><br><br><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;แล้วอุณหภูมิแบบไหนถึงจะเหมาะสมหล่ะ?&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h3>
         </div>
         <div class="header">
             <h1><br><img src="SoHot.jpg"alt="html5"width="500" height="300"><br></h1>
@@ -81,7 +81,7 @@
             </p>
         </div>
         <div class="title">
-            <h3><br><br><img src="logo.png" alt="html5"width="50" height="50"/>&emsp;แล้วค่าฝุ่นต้องเท่าไหร่ถึงจะปลอดภัย?&emsp;<img src="logo.png" alt="html5"width="50" height="50"/></h3>
+            <h3><br><br><img src="dusticon.png" alt="html5"width="50" height="50"/>&emsp;แล้วค่าฝุ่นต้องเท่าไหร่ถึงจะปลอดภัย?&emsp;<img src="dusticon.png" alt="html5"width="50" height="50"/></h3>
         </div>
         <div class="header">
             <h1><br><img src="p.m 2.5.jpg"alt="html5"width="500" height="300"><br></h1>
