--- a/login.html
+++ b/login.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: dimgrey;"
+<body style="background-color: dimgrey;">
 
   <head>
     <title>Login | Wealty</title>
     <link rel="shortcut icon" href="icon.ico">
-  </html>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial=1.0">
@@ -119,7 +118,7 @@
         <script type="text/javascript">
           
           function notavailable() {
-                                    alert("This function is not available yet.");
+                                    alert("Username & Pass is admin");
                                   }
 
           function checkUser()    {
