--- a/Home.html
+++ b/Home.html
@@ -15,9 +15,9 @@
     <header>
       <div class="nav">
           <ul>
-              <li class="Home"><a href="#">Home</a></li>
-              <li class="Sensor"><a href="#">Sensor</a></li>
-              <li class="About"><a href="#">About</a></li>
+              <li class="Home"><a href="./Home.html">Home</a></li>
+              <li class="Sensor"><a href="./Sensor.html">Sensor</a></li>
+              <li class="About"><a href="./About.html">About</a></li>
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -26,7 +26,7 @@
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
               &emsp;&nbsp;&nbsp;&nbsp;&nbsp;
-             <li class="Logout"><a href="#">Logout</a></li><i class="small material-icons">input</i>
+             <li class="Logout"><a href="./login.html">Logout</a></li><i class="small material-icons">input</i>
           </ul>
       </div>
     </header>
