--- a/About.html
+++ b/About.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="shortcut icon" href="icon.ico">
     <div class="bg-image">
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>About | Wealty</title>
-        <link rel="shortcut icon" href="icon.ico">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     
@@ -19,6 +19,12 @@
              color : #fff;
              text-align : center;
          }
+         h3 {
+            text-align : center;
+            color : #fff;
+            font-size: 30px;
+         }
+        
      </style>
     </head>
     <body>
@@ -47,7 +53,10 @@
             <h2>คณะผู้จัดทำ</h2>
           </div>
            <div class = "De-image">
-            <br><br><br><img src="id1.png" alt="html5"width="400" height="500" style="vertical-align:center"/>
+            <br><br><h3><img src="id1.png" alt="html5"width="300" height="400"/><h3>Mr.Pongsagul Boonrub </h3>
+            <br><br><br><h3><img src="id2.jpg" alt="html5"width="300" height="400"/><h3>Mr.Karnthi Phothidara </h3>
+            <br><br><br><h3><img src="id3.jpg" alt="html5"width="300" height="400"/><h3>Mr.Phodsaphong Suealueang </h3>
+
            </div>
         </div>
     </body>
