--- a/login.html
+++ b/login.html
@@ -47,6 +47,12 @@
     h3 {
       color: #fff;
     }
+    p {
+      font-size: 40px;
+    }
+    p1 {
+      font-size: 30px;
+    }
   </style>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
@@ -101,7 +107,7 @@
             <p style="color: floralwhite;">ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ</p>
           </h2>
           <h3>
-            <p style="color: floralwhite;">เพื่อสุขภาพที่ดีของคุณ</p>
+            <p1 style="color: floralwhite;">เพื่อสุขภาพที่ดีของคุณ</p1>
           </h3>
         </div>
       </div>
