--- a/Sensor.html
+++ b/Sensor.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="shortcut icon" href="icon.ico">
     <div class="bg-image">
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Sensor | Wealty</title>
-        <link rel="shortcut icon" href="icon.ico">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     
@@ -112,6 +112,11 @@
           font-size: 30px;
           color:#fff ;
         }
+        h3 {
+            font-size: 30px;
+            color:greenyellow ;
+            text-align: center;
+        }
      </style>
     <body ng-app="firebaseApp">
         <div ng-controller="firebaseCtrl" >
@@ -199,6 +204,11 @@
                         
         </script>
     </div>
+       <div class ="Check">
+           <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงที่ดีสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
+            <h4>ช่วงอุณภูมิ </h4>
+
+       </div>
     </body>
 
 
