--- a/About.html
+++ b/About.html
@@ -14,10 +14,12 @@
          h1 {
              color : #fff;
              text-align : center;
+             font-size: 70px;
          }
          h2 {
              color : #fff;
              text-align : center;
+             font-size: 35px;
          }
          h3 {
             text-align : center;
