--- a/login.html
+++ b/login.html
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="column" align="center">
           <h2>
-            <p style="color: floralwhite;">ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ</p>
+            <p style="color: floralwhite;"><img src="temicon.png" alt="html5"width="50" height="50"/>ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ<img src="temicon.png" alt="html5"width="50" height="50"/></p>
           </h2>
           <h3>
             <p1 style="color: floralwhite;">เพื่อสุขภาพที่ดีของคุณ</p1>
