--- a/Sensor.html
+++ b/Sensor.html
@@ -116,11 +116,13 @@
             font-size: 30px;
             color:greenyellow ;
             text-align: center;
+            text-shadow: 1px 1px green;
         }
         h4 {
             font-size: 30px;
             color: greenyellow ;
             text-align: center;
+            text-shadow: 1px 1px yellowgreen;
         }
         h5 {
             font-size: 30px;
@@ -131,6 +133,7 @@
             font-size: 30px;
             color:greenyellow ;
             text-align: center;
+            text-shadow: 1px 1px yellowgreen;
         }
      </style>
     <body ng-app="firebaseApp">
@@ -221,21 +224,27 @@
     </div>
        <div class ="Check">
            <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงที่ดีที่สุดสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
-            <h4><img src="sunsimp.png" alt="html5"width="400" height="400"/></h4>
-            <h6>ช่วงอุณหภูมิ: 32.5-35.5 องศา |  ความชื้น : 40-60% RH | ค่าฝุ่น : 0-50 AQI</h6>
-            <h6>คำแนะนำ : ดีสำหรับการออกไปข้างนอกหรือทำกิจกรรมนอกบ้าน</h6>
+            <h4><img src="sun_best.png" alt="html5"width="400" height="400"/></h4>
+            <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 32.5-35.5 องศา |  ความชื้น : 40-60% RH | ค่าฝุ่น : 0-50 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
+            <h6>&emsp;คำแนะนำ : ดีสำหรับการออกไปข้างนอกหรือทำกิจกรรมนอกบ้าน&emsp;</h6>
        </div>
        <div class = "check1">
         <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงปานกลางสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
-        <h4><img src="sunsimp.png" alt="html5"width="400" height="400"/></h4>
-        <h6>ช่วงอุณหภูมิ: 29.9-36.9 องศา |  ความชื้น : 38.8-65.5% RH | ค่าฝุ่น : 55-80 AQI</h6>
+        <h4><img src="sun_normal.png" alt="html5"width="400" height="400"/></h4>
+        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 29.9-36.9 องศา |  ความชื้น : 38.8-65.5% RH | ค่าฝุ่น : 55-100 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
         <h6>คำแนะนำ : อากาศมีการเปลี่ยนแปลงนิดหน่อยแต่ยังสามารถออกไปข้างนอกได้ตามปกติ และ ค่าฝุ่นยังอยู่ในเกณฑ์ที่ดี</h6>
        </div>
        <div class = "check2">
         <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงไม่ควรสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
-        <h4><img src="sunsimp.png" alt="html5"width="400" height="400"/></h4>
-        <h6>ช่วงอุณหภูมิ: 29.9-36.9 องศา |  ความชื้น : 38.8-65.5% RH | ค่าฝุ่น : 55-80 AQI</h6>
-        <h6>คำแนะนำ : อากาศมีการเปลี่ยนแปลงนิดหน่อยแต่ยังสามารถออกไปข้างนอกได้ตามปกติ และ ค่าฝุ่นยังอยู่ในเกณฑ์ที่ดี</h6>
+        <h4><img src="sun_bad.png" alt="html5"width="400" height="400"/></h4>
+        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 24.9-37.9 องศา |  ความชื้น : 36.9-69.9% RH | ค่าฝุ่น : 105.5-200 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
+        <h6>คำแนะนำ : ถ้าไม่จำเป็นไม่ควรออกจากบ้าน หรือถ้าจำเป็นควรมีการป้องกันที่ถูกต้องและถูกวิธี</h6>
+       </div>
+       <div class = "check3">
+        <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงไม่ดีสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
+        <h4><img src="worst_normal.png" alt="html5"width="400" height="400"/></h4>
+        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 15.0-40.0 องศา |  ความชื้น : 33.0-79.9% RH | ค่าฝุ่น : 200 AQI ขึ้นไป&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
+        <h6>คำแนะนำ : ถ้าไม่จำเป็นจริงๆ ไม่ควรออกจากบ้าน หรือถ้าจำเป็นควรมีการป้องกันที่ถูกต้องและถูกวิธี</h6>
        </div>
     </body>
 
