--- a/About.html
+++ b/About.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <link rel="shortcut icon" href="icon.ico">
     <div class="bg-image">
         <meta charset="utf-8">
@@ -25,6 +26,10 @@
             text-align : center;
             color : #fff;
             font-size: 30px;
+         }
+         h4{
+            color : #fff;
+            text-align : center;
          }
         
      </style>
@@ -55,9 +60,15 @@
             <h2>คณะผู้จัดทำ</h2>
           </div>
            <div class = "De-image">
-            <br><br><h3><img src="id1.png" alt="html5"width="300" height="400"/><h3>Mr.Pongsagul Boonrub </h3>
+            <br><br><h3><img src="D.jpg" alt="html5"width="300" height="400"/><h3>Mr.Pongsagul Boonrub </h3>
+            <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://web.facebook.com/thongphae" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</h4>
+            <h4><i class="fab fa-google"></i>&nbsp;: Gmail : 6310301003@cdti.ac.th</h4>
             <br><br><br><h3><img src="id2.jpg" alt="html5"width="300" height="400"/><h3>Mr.Karnthi Phothidara </h3>
-            <br><br><br><h3><img src="id3.jpg" alt="html5"width="300" height="400"/><h3>Mr.Phodsaphong Suealueang </h3>
+            <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://web.facebook.com/thongphae" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</li></h4>
+            <h4><i class="fab fa-google"></i>&nbsp;: Gmail : 6310301027@cdti.ac.th</li></h4>
+            <br><br><br><h3><img src="De.jpg" alt="html5"width="300" height="400"/><h3>Mr.Phodsaphong Suealueang </h3>
+            <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://www.facebook.com/profile.php?id=100005528684714" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</li></h4>
+            <h4><i class="fab fa-google"></i>&nbsp;: Gmail : 6310301004@cdti.ac.th</li></h4>
 
            </div>
         </div>
