--- a/About.html
+++ b/About.html
@@ -16,20 +16,24 @@
              color : #fff;
              text-align : center;
              font-size: 70px;
+             text-shadow: 1px 1px black;
          }
          h2 {
              color : #fff;
              text-align : center;
              font-size: 35px;
+             text-shadow: 1px 1px black;
          }
          h3 {
             text-align : center;
             color : #fff;
             font-size: 30px;
+            text-shadow: 1px 1px black;
          }
          h4{
             color : #fff;
             text-align : center;
+            text-shadow: 1px 1px black;
          }
         
      </style>
@@ -56,15 +60,15 @@
         </header>
         <div class = "Main">
            <div class = "title">
-            <h1>Developer</h1>
+            <h1><img src="dusticon.png" alt="html5"width="50" height="50"/>&nbsp;Developer&nbsp;<img src="dusticon.png" alt="html5"width="50" height="50"/></h1>
             <h2>คณะผู้จัดทำ</h2>
           </div>
            <div class = "De-image">
             <br><br><h3><img src="D.jpg" alt="html5"width="300" height="400"/><h3>Mr.Pongsagul Boonrub </h3>
             <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://web.facebook.com/thongphae" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</h4>
             <h4><i class="fab fa-google"></i>&nbsp;: Gmail : 6310301003@cdti.ac.th</h4>
-            <br><br><br><h3><img src="id2.jpg" alt="html5"width="300" height="400"/><h3>Mr.Karnthi Phothidara </h3>
-            <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://web.facebook.com/thongphae" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</li></h4>
+            <br><br><br><h3><img src="Dee.jpg" alt="html5"width="300" height="400"/><h3>Mr.Karnthi Phothidara </h3>
+            <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://www.facebook.com/karnthi.phothidara/" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</li></h4>
             <h4><i class="fab fa-google"></i>&nbsp;: Gmail : 6310301027@cdti.ac.th</li></h4>
             <br><br><br><h3><img src="De.jpg" alt="html5"width="300" height="400"/><h3>Mr.Phodsaphong Suealueang </h3>
             <h4><i class="fab fa-facebook-f"></i>&nbsp;: Facbook (&emsp;<a href="https://www.facebook.com/profile.php?id=100005528684714" target="_blank"target="_blank"> Click Here</i></a>&emsp;)</li></h4>
