--- a/Home.html
+++ b/Home.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    
 
     <header>
       <div class="nav">
@@ -70,11 +71,11 @@
                 ของมนุษย์เราจะมีอุณภูมิปกติอยู่ที่ 36 องศา และความชื้นที่ดีที่สุดสำหรับมนุษย์เราคือ 40-60% RH อย่างไรก็ตาม อุณภูมิในร่างกายจริงๆก็ขึ้นอยู่กับ เพศและอายุและ<br>
                 ปัจจัยอื่นๆด้วย แต่จะอยู่ประมาณ 36.1-37.2 เป็นต้น ดังนั้นช่วงอุณภูมินี้จึงจะดีสำหรับร่างกายที่สุด แต่ว่าเรามีช่วง อากาศมาให้ดูด้วยว่าอุณภูมิช่วงไหนอากาศจะเป็นอย่างไร
               <ul>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;อากาศร้อน (Hot) อุณหภูมิตั้งแต่ 35.0 – 39.9 องศาเซลเซียส<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;อากาศร้อนจัด (Very Hot) อุณหภูมิตั้งแต่ 40.0 องศาเซลเซียสขึ้นไป<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;อากาศเย็น (Cool) อุณหภูมิตั้งแต่ 18.0 – 22.9 องศาเซลเซียส<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;อากาศค่อนข้างหนาว (Moderately Cold) อุณหภูมิตั้งแต่ 16.0 – 17.9 องศาเซลเซียส<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;อากาศหนาว (Cold) อุณหภูมิตั้งแต่ 8.0 – 15.9 องศาเซลเซียส
+                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p4>อากาศร้อน (Hot)</p4> อุณหภูมิตั้งแต่ 35.0 – 39.9 องศาเซลเซียส<br>
+                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p5>อากาศร้อนจัด (Very Hot)</p5> อุณหภูมิตั้งแต่ 40.0 องศาเซลเซียสขึ้นไป<br>
+                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p1>อากาศเย็น (Cool)</p1> อุณหภูมิตั้งแต่ 18.0 – 22.9 องศาเซลเซียส<br>
+                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p7>อากาศหนาว (Cold)</p7> อุณหภูมิตั้งแต่ 16.0 – 17.9 องศาเซลเซียส<br>
+                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p6>อากาศหนาวมาก (Very Cold)</p6> อุณหภูมิตั้งแต่ 8.0 – 15.9 องศาเซลเซียส
              </ul>
             
             </p>
