--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   <style type="text/css">
     .bg-image {
       background-color: #232222;
-      background-image: url("bg.png");
+      background-image: url("cb.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -42,10 +42,12 @@
 
     h2 {
       color: #fff;
+      text-shadow: 1px 1px black;
     }
 
     h3 {
       color: #fff;
+      text-shadow: 1px 1px black;
     }
     p {
       font-size: 40px;
