--- a/login.html
+++ b/login.html
@@ -41,13 +41,15 @@
     }
 
     h2 {
-      color: #fff;
+      color: skyblue;
       text-shadow: 1px 1px black;
+      font-size: 45px;
     }
 
     h3 {
-      color: #fff;
+      color: skyblue;
       text-shadow: 1px 1px black;
+      font-size: 35px;
     }
     p {
       font-size: 40px;
@@ -106,11 +108,9 @@
       <div class="row">
         <div class="column" align="center">
           <h2>
-            <p style="color: floralwhite;"><img src="temicon.png" alt="html5"width="50" height="50"/>ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ<img src="temicon.png" alt="html5"width="50" height="50"/></p>
+            <img src="temicon.png" alt="html5"width="50" height="50"/>&nbsp;ระบบตรวจสอบคุณภาพอากาศและอุณหภูมิของอากาศ&nbsp;<img src="temicon.png" alt="html5"width="50" height="50"/>
           </h2>
-          <h3>
-            <p1 style="color: floralwhite;">เพื่อสุขภาพที่ดีของคุณ</p1>
-          </h3>
+          <h3>เพื่อสุขภาพที่ดีของคุณ</h3>
         </div>
       </div>
 
