--- a/Sensor.html
+++ b/Sensor.html
@@ -192,7 +192,7 @@
                         title: "Air Quality Index",
                         value: 1,
                         min: 0,
-                        max: 100,
+                        max: 300,
                         gaugeWidthScale: 0.7,
                         counter: true,
                         titleFontColor: "#fff",
@@ -224,8 +224,8 @@
                         id: "guage2",
                         title: "Humidity",
                         value: 1,
-                        min: 0,
-                        max: 100,
+                        min: 30,
+                        max: 85,
                         gaugeWidthScale: 0.7,
                         counter: true,
                         titleFontColor: "#fff",
@@ -241,8 +241,8 @@
                         id: "guage3",
                         title: "temperature",
                         value: 1,
-                        min: 0,
-                        max: 60,
+                        min: 10,
+                        max: 45,
                         gaugeWidthScale: 0.7,
                         counter: true,
                         titleFontColor: "#fff",
@@ -264,20 +264,20 @@
        <div class = "check1">
         <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงปานกลางสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
         <h4><img src="sun_normal.png" alt="html5"width="400" height="400"/></h4>
-        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 29.9-36.9 องศา |  ความชื้น : 38.8-65.5% RH | ค่าฝุ่น : 55-100 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
+        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 29.9 หรือน้อยกว่า 36.9 องศา |  ความชื้น : 38.8-65.5% RH | ค่าฝุ่น : 55-100 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
         <h6><img src="question.png" alt="html5"width="50" height="50"/>คำแนะนำ : อากาศมีการเปลี่ยนแปลงนิดหน่อยแต่ยังสามารถออกไปข้างนอกได้ตามปกติ และ ค่าฝุ่นยังอยู่ในเกณฑ์ที่ดี<img src="question.png" alt="html5"width="50" height="50"/></h6>
        </div>
        <div class = "check2">
         <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงไม่ควรสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
         <h4><img src="sun_bad.png" alt="html5"width="400" height="400"/></h4>
-        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 24.9-37.9 องศา |  ความชื้น : 36.9-69.9% RH | ค่าฝุ่น : 105.5-200 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
+        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 24.9 หรือน้อยกว่า 37.9 หรือมากกว่า  |  ความชื้น : 36.9% หรือน้อยกว่า 69.9% หรือมากกว่า | ค่าฝุ่น : 105.5-200 AQI&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
         <h6><img src="question.png" alt="html5"width="50" height="50"/>คำแนะนำ : ถ้าไม่จำเป็นไม่ควรออกจากบ้าน หรือถ้าจำเป็นควรมีการป้องกันที่ถูกต้องและถูกวิธี<img src="question.png" alt="html5"width="50" height="50"/></h6>
        </div>
        <div class = "check3">
         <br><br><br><br><h3><img src="ideaicon.png" alt="html5"width="50" height="50"/>ช่วงไม่ดีสำหรับการออกจากบ้าน<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
         <h4><img src="worst_normal.png" alt="html5"width="400" height="400"/></h4>
-        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 15.0-40.0 องศา |  ความชื้น : 33.0-79.9% RH | ค่าฝุ่น : 200 AQI ขึ้นไป&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
-        <h6><img src="question.png" alt="html5"width="50" height="50"/>คำแนะนำ : ถ้าไม่จำเป็นจริงๆ ไม่ควรออกจากบ้าน หรือถ้าจำเป็นควรมีการป้องกันที่ถูกต้องและถูกวิธี<img src="question.png" alt="html5"width="50" height="50"/></h6>
+        <h6><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;ช่วงอุณหภูมิ: 15.0 หรือน้อยกว่า 40.0 หรือมากกว่า |  ความชื้น : 33.0 หรือน้อยกว่า 79.9 หรือมากกว่า | ค่าฝุ่น : 200 AQI ขึ้นไป&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h6>
+        <h6><img src="question.png" alt="html5"width="50" height="50"/>คำแนะนำ : ถ้าไม่จำเป็นจริงๆ ไม่ควรออกจากบ้าน เตือนด้วยความหวังดีครับ!!!!!<img src="question.png" alt="html5"width="50" height="50"/></h6>
        </div>
     </body>
 
