--- a/Sensor.html
+++ b/Sensor.html
@@ -195,12 +195,13 @@
                         max: 300,
                         gaugeWidthScale: 0.7,
                         counter: true,
-                        titleFontColor: "#fff",
+                        titleFontColor: "black",
                         titleFontFamily: "Georgia",
                         titlePosition: "below",
-                        valueFontColor: "green",
+                        valueFontColor: "Black",
                         valueFontFamily: "Georgia",
                         titleFontFamily: "Vollkorn",
+                        decimals : 2 ,
                     });
         // var guage1; 
         //     guage1 = new JustGage({
@@ -228,12 +229,13 @@
                         max: 85,
                         gaugeWidthScale: 0.7,
                         counter: true,
-                        titleFontColor: "#fff",
+                        titleFontColor: "black",
                         titleFontFamily: "Georgia",
                         titlePosition: "below",
-                        valueFontColor: "green",
+                        valueFontColor: "Black",
                         valueFontFamily: "Georgia",
                         titleFontFamily: "Vollkorn",
+                        decimals : 2 ,
                 
                         });
             var guage3; 
@@ -245,12 +247,13 @@
                         max: 45,
                         gaugeWidthScale: 0.7,
                         counter: true,
-                        titleFontColor: "#fff",
+                        titleFontColor: "black",
                         titleFontFamily: "Georgia",
                         titlePosition: "below",
-                        valueFontColor: "green",
+                        valueFontColor: "Black",
                         valueFontFamily: "Georgia",
                         titleFontFamily: "Vollkorn",
+                        decimals : 2 ,
                         });
       
         </script>
